Cleaned up few things. Fixed registration of extension delegates (https://github.com/nilshoerrmann/subsectionmanager/issues/115). Changed keyboard shortcut from `CTRL+SPACE` to `CTRL+I` which should be better suited for this (http://en.wikipedia.org/wiki/Control_key#Examples). Added support for optional debugging mode (`CTRL+SHIFT+I`). Changed value pasted by default from simple ID number to `"[autocompleted item text]" ([autocompleted item field handle]://[autocompleted item ID])`.

--- a/assets/autocompleter.publish.css
+++ b/assets/autocompleter.publish.css
@@ -1,3 +1,6 @@
+span.autocompleter-help.warning {
+	color: #d42;
+}
 
 div.autocompleter-popup {
 	overflow: auto;
@@ -38,4 +41,8 @@ div.autocompleter-popup .item.highlighted {
 
 div.autocompleter-popup p.debug {
 	display: none;
+}
+div.autocompleter-popup.debug p.debug {
+	display: block;
+	background: rgba(255, 128, 128, 0.3);
 }
